Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8, 12.3
-
None
-
Can result in unexpected behaviour
-
FILE privilege isn't checked for derived table
Description
Test
--error ER_ACCESS_DENIED_ERROR
|
evalp select * into outfile '$MYSQLTEST_VARDIR/tmp/3701920.out' from (select 'hello') t; |
fails with
mysqltest: At line 178: query 'select * into outfile '$MYSQLTEST_VARDIR/tmp/3701920.out' from (select 'hello') t' succeeded - should have failed with error ER_ACCESS_DENIED_ERROR (1045)...
|
Reported by Tomer Fichman
Attachments
Issue Links
- links to